# esp32-smartdisplay

./: CMakeLists.txt
src/: esp32_smartdisplay.c  lvgl_panel_st7262_par.c
